--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
         <nav>
             <div class="logo">
                 <h1>Hiring Indians in America</h1>
+            </div><!-- Add this section to your main index.html file -->
+<section id="employee-of-the-month">
+    <div class="container">
+        <h2>Employee of the Month</h2>
+        <div class="employee">
+            <div class="employee-image">
+                <img src="employee-of-the-month.jpg" alt="Employee of the Month">
             </div>
+            <div class="employee-details">
+                <h3>John Doe</h3>
+                <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+            </div>
+        </div>
+    </div>
+</section>
             <ul class="nav-links">
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Services</a></li>
